# cto.new

./: .env.example  .eslintrc.cjs  .gitignore  README.md  app.js  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pyproject.toml  pytest.ini  render.yaml  requirements.txt  styles.css  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
__tests__/: api.test.js  jobManager.test.js
app/: main.py
apps/web/: .env.example  package.json  tsconfig.json
docs/: operations.md
excel_batch_cleaner/: __init__.py  cleaner.py  schema.py
lib/: guard.js  mime.js  rateLimit.js  tempStorage.js  utils.js
ocr_table/: __init__.py  config.py  export.py  models.py  pipeline.py
ocr_table/fallback/: __init__.py  local.py
public/: payment.html  result.html
samples/: example.txt
services/worker/: Dockerfile  Makefile  README.md  README_DOCKER_DEPS.md  package.json  pyproject.toml  start.sh  tasks.py
services/worker/contract/: job_contract.schema.json  job_contract.ts
services/worker/src/: index.js
services/worker/tests/: test_signature.py  test_zip_batch.py
services/worker/tests/integration/: node_client.mjs
services/worker/worker/app/: config.py  handlers.py  main.py  schemas.py  security.py  zip_batch.py
src/: app.ts  config.ts  db.ts  index.ts  logger.js  logger.ts  server.js  types.js  types.ts  utils.js  utils.ts
tests/: e2e.spec.js  test_api.py  test_cleaner.py  test_export.py  test_exporter.py  test_pipeline.py  test_providers.py
xlsx_png/: __init__.py  exporter.py
(+35 files in other folders)
