[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_batch_cleaner"
version = "0.1.0"
description = "Excel batch cleaning with JSON schema and pandas"
requires-python = ">=3.9"
authors = [{name = "ctonew", email = "devnull@example.com"}]
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.1.0",
    "jsonschema>=4.0.0",
    "python-dateutil>=2.8.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
