[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Python worker service with FastAPI and stub job handlers"
authors = ["ACME Dev Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "worker" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
requests = "^2.32.3"
httpx = "^0.27.2"
# Data/processing libs
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pdf2image = "^1.17.0"
camelot-py = {version = "^0.11.0", extras=["cv"]}
tabula-py = "^2.9.3"
opencv-python-headless = "^4.10.0.84"
# OCR
paddlepaddle = "^2.6.1"
paddleocr = "^2.7.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
